--- a/app/src/main/res/layout/activity_rute.xml
+++ b/app/src/main/res/layout/activity_rute.xml
@@ -30,38 +30,345 @@
         android:src="@drawable/tempat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.265"
+        app:layout_constraintHorizontal_bias="0.269"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.18" />
+        app:layout_constraintVertical_bias="0.177" />
+
+    <ImageView
+        android:id="@+id/tempat5"
+        android:layout_width="5dp"
+        android:layout_height="90dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.371"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.336" />
+
+    <ImageView
+        android:id="@+id/tempat6"
+        android:layout_width="6dp"
+        android:layout_height="102dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.457" />
+
+    <ImageView
+        android:id="@+id/tempat7"
+        android:layout_width="6dp"
+        android:layout_height="76dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.735"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.388" />
+
+    <ImageView
+        android:id="@+id/tempat24"
+        android:layout_width="6dp"
+        android:layout_height="102dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.663"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.456" />
 
     <ImageView
         android:id="@+id/tempat4"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="5dp"
+        android:layout_height="36dp"
         android:rotation="270"
         android:scaleType="centerCrop"
         android:src="@drawable/tempat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.21"
+        app:layout_constraintHorizontal_bias="0.212"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.314" />
+        app:layout_constraintVertical_bias="0.528" />
+
+    <ImageView
+        android:id="@+id/tempat14"
+        android:layout_width="5dp"
+        android:layout_height="36dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.212"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.306" />
+
+    <ImageView
+        android:id="@+id/tempat11"
+        android:layout_width="5dp"
+        android:layout_height="36dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.541"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.637" />
+
+    <ImageView
+        android:id="@+id/tempat22"
+        android:layout_width="5dp"
+        android:layout_height="36dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.607"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.637" />
+
+    <ImageView
+        android:id="@+id/tempat16"
+        android:layout_width="5dp"
+        android:layout_height="36dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.37"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.637" />
+
+    <ImageView
+        android:id="@+id/tempat10"
+        android:layout_width="5dp"
+        android:layout_height="36dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.413"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.152" />
+
+    <ImageView
+        android:id="@+id/tempat19"
+        android:layout_width="35dp"
+        android:layout_height="5dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.436"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.229" />
+
+    <ImageView
+        android:id="@+id/tempat25"
+        android:layout_width="53dp"
+        android:layout_height="5dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.786"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.487" />
+
+    <ImageView
+        android:id="@+id/tempat26"
+        android:layout_width="53dp"
+        android:layout_height="5dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.716"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.586" />
+
+    <ImageView
+        android:id="@+id/tempat18"
+        android:layout_width="3dp"
+        android:layout_height="88dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.539"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.182" />
+
+    <ImageView
+        android:id="@+id/tempat17"
+        android:layout_width="5dp"
+        android:layout_height="36dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.315"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.552" />
+
+    <ImageView
+        android:id="@+id/tempat20"
+        android:layout_width="5dp"
+        android:layout_height="36dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.315"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.306" />
 
     <ImageView
         android:id="@+id/tempat2"
-        android:layout_width="10dp"
-        android:layout_height="10dp"
+        android:layout_width="40dp"
+        android:layout_height="5dp"
         android:rotation="270"
         android:scaleType="centerCrop"
         android:src="@drawable/tempat"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.23"
+        app:layout_constraintHorizontal_bias="0.223"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.270" />
+        app:layout_constraintVertical_bias="0.272" />
+
+    <ImageView
+        android:id="@+id/tempat13"
+        android:layout_width="68dp"
+        android:layout_height="5dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.19"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.576" />
+
+    <ImageView
+        android:id="@+id/tempat12"
+        android:layout_width="40dp"
+        android:layout_height="5dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.338"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.588" />
+
+    <ImageView
+        android:id="@+id/tempat8"
+        android:layout_width="40dp"
+        android:layout_height="5dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.331"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.27" />
+
+    <ImageView
+        android:id="@+id/tempat9"
+        android:layout_width="65dp"
+        android:layout_height="4dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.411"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.476" />
+
+    <ImageView
+        android:id="@+id/tempat15"
+        android:layout_width="65dp"
+        android:layout_height="4dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.587" />
+
+    <ImageView
+        android:id="@+id/tempat23"
+        android:layout_width="76dp"
+        android:layout_height="5dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.61"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.27" />
+
+    <ImageView
+        android:id="@+id/tempat21"
+        android:layout_width="81dp"
+        android:layout_height="5dp"
+        android:rotation="270"
+        android:scaleType="centerCrop"
+        android:src="@drawable/tempat"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.615"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.465" />
 
     <ImageView
         android:id="@+id/tempat"
