--- a/app/src/main/res/layout/activity_game_uang.xml
+++ b/app/src/main/res/layout/activity_game_uang.xml
@@ -114,6 +114,19 @@
         app:layout_constraintVertical_bias="0.469" />
 
     <ImageView
+        android:id="@+id/limaratus2"
+        android:layout_width="45dp"
+        android:layout_height="44dp"
+        android:scaleType="centerCrop"
+        android:src="@drawable/limaratus"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.428"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.651" />
+
+    <ImageView
         android:id="@+id/seribukoin"
         android:layout_width="45dp"
         android:layout_height="44dp"
