--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,15 +7,6 @@
     android:layout_height="match_parent"
     tools:context=".Login">
 
-    <!-- Background -->
-
-    <!-- Robot ImageView -->
-
-    <!-- Title -->
-
-    <!-- Username -->
-
-
     <ImageView
         android:id="@+id/splashBackground"
         android:layout_width="0dp"
@@ -24,100 +15,75 @@
         android:src="@drawable/halamanmulai"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
-    <ImageView
-        android:id="@+id/robotlanang"
-        android:layout_width="244dp"
-        android:layout_height="297dp"
-        android:layout_marginStart="8dp"
-        android:scaleType="centerCrop"
-        android:src="@drawable/robotgede"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/et_username"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.672" />
-
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="16dp"
-        android:text="Masuk dulu ya adik maniez.."
-        android:textColor="@android:color/white"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@id/robotlanang"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <TextView
+        android:id="@+id/awal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="104dp"
+        android:layout_marginEnd="212dp"
+        android:fontFamily="@font/changaregular"
+        android:text="Daftar dulu yaa.."
+        android:textColor="@android:color/white"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/splashBackground" />
+
+
     <EditText
-        android:id="@+id/et_username"
-        android:layout_width="427dp"
+        android:id="@+id/et_namaakun"
+        android:layout_width="299dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/kotakisi"
-        android:hint="Masukkan Nama Akun"
+        android:hint="Masukkan Email/Nama Akun"
         android:inputType="text"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/robotlanang"
-        app:layout_constraintTop_toBottomOf="@id/tv_title" />
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/awal" />
 
-    <!-- Password -->
     <EditText
-        android:id="@+id/et_password"
-        android:layout_width="426dp"
+        android:id="@+id/et_kelas"
+        android:layout_width="299dp"
         android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="8dp"
         android:background="@drawable/kotakisi"
-        android:hint="Masukkan Kata Sandi"
-        android:inputType="textPassword"
+        android:hint="Masukkan Kata sandi"
+        android:inputType="text"
         android:padding="12dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/robotlanang"
-        app:layout_constraintTop_toBottomOf="@id/et_username" />
-
-    <!-- Login Button -->
-
-    <!-- Register Prompt -->
-
-    <!-- Register Link -->
+        app:layout_constraintHorizontal_bias="0.8"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_namaakun" />
 
     <ImageView
         android:id="@+id/btnlogin"
         android:layout_width="133dp"
         android:layout_height="43dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginTop="52dp"
         android:scaleType="fitXY"
-        android:src="@drawable/btnlogin"
+        android:src="@drawable/btnselanjutnya"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.405"
-        app:layout_constraintStart_toEndOf="@id/robotlanang"
-        app:layout_constraintTop_toBottomOf="@id/et_password" />
+        app:layout_constraintHorizontal_bias="0.729"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/et_kelas" />
 
     <TextView
         android:id="@+id/tv_register_prompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Belum punya akun?"
+        android:layout_marginTop="12dp"
+        android:fontFamily="@font/changaregular"
+        android:text="Sudah punya akun?"
         android:textColor="@android:color/white"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.31"
-        app:layout_constraintStart_toEndOf="@id/robotlanang"
+        app:layout_constraintHorizontal_bias="0.639"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/btnlogin" />
 
     <TextView
@@ -125,7 +91,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="4dp"
-        android:text="Yuk daftar dulu"
+        android:fontFamily="@font/changaregular"
+        android:text="Yuk masuk dulu"
         android:textColor="@android:color/holo_blue_light"
         android:textSize="14sp"
         android:textStyle="bold"
